# mcap-lake

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  justfile
data/: Dockerfile  LICENSE.md  README.md  download_logs.py
foxglove/: README.md  px4_flight_analysis.json
mcap_ingest/: Cargo.toml  Dockerfile  README.md
mcap_ingest/ingest-batch/: Cargo.toml
mcap_ingest/ingest-batch/src/: main.rs
mcap_ingest/ingest-core/: Cargo.toml
mcap_ingest/ingest-core/src/: arrow_encode.rs  arrow_schema.rs  iceberg_commit.rs  lib.rs  mcap_reader.rs  parquet.rs  storage.rs  topics.rs
mcap_ingest/ingest-core/tests/: decode_mcap.rs  list_mcap.rs
ulog_conversion/: Dockerfile  README.md  pyproject.toml
ulog_conversion/src/: convert.py  main.py  proto_gen.py  storage.py
ulog_conversion/test/: test_convert.py  test_proto_gen.py
warehouse/: Dockerfile  README.md  lake_init.sql
