[package]
name = "ingest-core"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58"
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures-util = "0.3.32"
iceberg = { git = "https://github.com/apache/iceberg-rust", branch = "main" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", branch = "main" }
iceberg-storage-opendal = { git = "https://github.com/apache/iceberg-rust", branch = "main", features = ["opendal-s3"] }
mcap = "0.18"
object_store = { version = "0.12", features = ["aws"] }
parquet = { version = "58", features = ["arrow", "async"] }
prost = "0.13"
prost-reflect = "0.14"
prost-types = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1"
url = "2.5.8"
uuid = { version = "1", features = ["v4"] }
